im trying to fix spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -121,8 +121,6 @@ html {
 footer {
   background-color: #AA7F39;
   display: flex;
-  justify-items: end;
-  grid-template-columns: auto auto auto;
   align-items: flex-start;
   line-height: 1.5em;
   text-wrap: wrap;
@@ -139,7 +137,7 @@ footer {
 #footerLogo {
   display: block;
   text-wrap: wrap;
-  margin: 5%;
+  margin-left: 5%;
 }
 #footerLinks a {
   color: #442a00;
@@ -153,7 +151,7 @@ footer {
 #footerLinks {
   display: block;
   text-wrap: wrap;
-  margin: 5%;
+  margin-right: 5%;
 }
 #footerLinks h3 {
   font-size: 2em;
@@ -169,22 +167,6 @@ footer {
   font-size: 1em;
 }
 @media (min-width: 900px) {
-  .image-text-container img {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  #homeBusiness {
-    position: absolute;
-    color: #442A00;
-    background-color: white;
-    padding: 0 1rem;
-    width: %;
-    border: 0.25em dashed #442a00;
-    text-wrap: wrap;
-    margin-left: 20%;
-    top: 1rem;
-  }
   #home h2 {
     font-size: 2em;
     line-height: 1.5em;
